[gd_scene load_steps=3 format=3 uid="uid://b84g10b3l08wc"]

[ext_resource type="Script" path="res://scenes/character_icon.gd" id="1_x5sk1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vlow2"]
size = Vector2(259, 267)

[node name="character_icon" type="Node2D"]
script = ExtResource("1_x5sk1")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_vlow2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
